Add comprehensive scraping and security subsystem
- Introduced a multi-phase scraping framework for ingesting and managing ESPN data
- Phases include schema migration, ESPN API client, scraping services, admin panel UI, and scheduled scraping
- Removed the outdated Tournament subsystem and related references
- Implemented Spring Security for admin authentication and authorization
- Added Admin control panel with scraping triggers, schedules, and batch history
- Updated CLAUDE.md with project and schema revisions
- Verified functionality with integration and security tests